@@ -24,6 +24,7 @@ import org.alvindimas05.lagassist.utils.Others;
 
 class BenchmarkData {
     public List<BenchmarkCPU> data;
+
     public static class BenchmarkCPU {
         public String name;
         public String cpumark;
@@ -34,30 +35,31 @@ class BenchmarkData {
 
 public class SpecsGetter {
 
-	private static OperatingSystemMXBean osmx = ManagementFactory.getOperatingSystemMXBean();
+    private static final OperatingSystemMXBean osmx = ManagementFactory.getOperatingSystemMXBean();
 
-	private static String getLinuxCPU() {
+    private static String getLinuxCPU() {
 
-		final String regex = "model name	: (.*\\n)";
+        final String regex = "model name	: (.*\\n)";
 
-		File fl = new File("/proc/cpuinfo");
-		if (!fl.exists()) {
-			return "unknown";
-		}
-		if (!fl.canRead()) {
-			return "unknown";
-		}
-		try {
-			String stg = Others.readInputStreamAsString(new FileInputStream(fl));
+        File fl = new File("/proc/cpuinfo");
+        if (!fl.exists()) {
+            return "unknown";
+        }
+        if (!fl.canRead()) {
+            return "unknown";
+        }
+        try {
+            String stg = Others.readInputStreamAsString(new FileInputStream(fl));
 
-			final Pattern pattern = Pattern.compile(regex, Pattern.MULTILINE);
-			final Matcher matcher = pattern.matcher(stg);
-			matcher.find();
+            final Pattern pattern = Pattern.compile(regex, Pattern.MULTILINE);
+            assert stg != null;
+            final Matcher matcher = pattern.matcher(stg);
+            matcher.find();
 
-			return matcher.group(1).replaceAll("\n", "");
-		} catch (IOException e) {
-			e.printStackTrace();
-		}
+            return matcher.group(1).replaceAll("\n", "");
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
         return "unknown";
 	}
 
@@ -84,137 +86,130 @@ public class SpecsGetter {
         return cpu;
     }
 
-	private static String getWindowsCPU() {
-		Runtime rt = Runtime.getRuntime();
-		try {
-			Process proc = rt.exec("powershell -command \"(Get-CimInstance Win32_Processor).Name\"");
-			BufferedReader reader = new BufferedReader(new InputStreamReader(proc.getInputStream()));
+	 private static String getWindowsCPU() {
+      Runtime rt = Runtime.getRuntime();
+      try {
+          Process proc = rt.exec("powershell -command \"(Get-CimInstance Win32_Processor).Name\"");
+          BufferedReader reader = new BufferedReader(new InputStreamReader(proc.getInputStream()));
+          return reader.readLine();
+      } catch (IOException e) {
+          return "unknown";
+      }
+    }
+
+    private static String getMacCPU() {
+        Runtime rt = Runtime.getRuntime();
+        try {
+            Process proc = rt.exec("sysctl -n machdep.cpu.brand_string");
+            BufferedReader reader = new BufferedReader(new InputStreamReader(proc.getInputStream()));
             return reader.readLine();
-		} catch (IOException e) {
-			return "unknown";
-		}
+        } catch (IOException e) {
+            return "unknown";
+        }
 
-	}
+    }
 
-	private static String getMacCPU() {
-		Runtime rt = Runtime.getRuntime();
-		try {
-			Process proc = rt.exec("sysctl -n machdep.cpu.brand_string");
-			BufferedReader reader = new BufferedReader(new InputStreamReader(proc.getInputStream()));
-            return reader.readLine();
-		} catch (IOException e) {
-			return "unknown";
-		}
-
-	}
-
-    private static String formatCPU(String cpuname){
+    private static String formatCPU(String cpuname) {
         return String.join(" ",
-            Arrays.copyOfRange(
-                cpuname.replaceAll("\\(R\\)| CPU", "").split(" "),
-                0, 4
-            )
+                Arrays.copyOfRange(
+                        cpuname.replaceAll("\\(R\\)| CPU", "").split(" "),
+                        0, 4
+                )
         );
     }
 
-	public static String getCPU(String OS) {
-        switch (OS) {
-            case "windows": return getWindowsCPU();
-            case "linux": return getLinuxCPU();
-            case "mac": return getMacCPU();
-            default: return "unknown";
-        }
-	}
+    public static String getCPU(String OS) {
+        return switch (OS) {
+            case "windows" -> getWindowsCPU();
+            case "linux" -> getLinuxCPU();
+            case "mac" -> getMacCPU();
+            default -> "unknown";
+        };
+    }
 
     public static int getCores() {
         String OS = getOS();
-        String command = "";
-        switch (OS) {
-            case "mac":
-                command = "sysctl -n machdep.cpu.core_count";
-                break;
-            case "linux":
-                command = "lscpu";
-                break;
-            case "windows":
-                command = "powershell -command \"(Get-CimInstance Win32_Processor).NumberOfCores\"";
-                break;
-        }
+        String command = switch (OS) {
+            case "mac" -> "sysctl -n machdep.cpu.core_count";
+            case "linux" -> "lscpu";
+            case "windows" -> "powershell -command \"(Get-CimInstance Win32_Processor).NumberOfCores\"";
+            default -> "";
+        };
+      
         Process process = null;
         int numberOfCores = 0;
         int sockets = 0;
         try {
-            if(OS.equals("mac")){
-                String[] cmd = { "/bin/sh", "-c", command};
+            if (OS.equals("mac")) {
+                String[] cmd = {"/bin/sh", "-c", command};
                 process = Runtime.getRuntime().exec(cmd);
-            }else{
+            } else {
                 process = Runtime.getRuntime().exec(command);
             }
         } catch (IOException e) {
             e.printStackTrace();
         }
 
+        assert process != null;
         BufferedReader reader = new BufferedReader(
-            new InputStreamReader(process.getInputStream()));
+                new InputStreamReader(process.getInputStream()));
         String line;
 
         try {
             while ((line = reader.readLine()) != null) {
-                if(OS.equals("mac")){
-                    numberOfCores = !line.isEmpty() ? Integer.parseInt(line) : 0;
-                }else if (OS.equals("linux")) {
-                    if (line.contains("Core(s) per socket:")) {
-                        numberOfCores = Integer.parseInt(line.split("\\s+")[line.split("\\s+").length - 1]);
+                switch (OS) {
+                    case "mac" -> numberOfCores = !line.isEmpty() ? Integer.parseInt(line) : 0;
+                    case "linux" -> {
+                        if (line.contains("Core(s) per socket:")) {
+                            numberOfCores = Integer.parseInt(line.split("\\s+")[line.split("\\s+").length - 1]);
+                        }
+                        if (line.contains("Socket(s):")) {
+                            sockets = Integer.parseInt(line.split("\\s+")[line.split("\\s+").length - 1]);
+                        }
                     }
-                    if(line.contains("Socket(s):")){
-                        sockets = Integer.parseInt(line.split("\\s+")[line.split("\\s+").length - 1]);
-                    }
-                } else if (OS.equals("windows")) {
-                    numberOfCores = Integer.parseInt(line);
+                    case "windows" -> numberOfCores = Integer.parseInt(line);
                 }
             }
         } catch (IOException e) {
             e.printStackTrace();
         }
-        if(OS.equals("linux")){
+        if (OS.equals("linux")) {
             return numberOfCores * sockets;
         }
         return numberOfCores;
     }
 
-	public static String getOS() {
-		String OS = System.getProperty("os.name").toLowerCase();
-		if (OS.contains("linux")) {
-			return "linux";
-		} else if (OS.contains("win")) {
-			return "windows";
-		} else if (OS.contains("mac")) {
-			return "mac";
-		} else {
-			return "other";
-		}
-	}
+    public static String getOS() {
+        String OS = System.getProperty("os.name").toLowerCase();
+        if (OS.contains("linux")) {
+            return "linux";
+        } else if (OS.contains("win")) {
+            return "windows";
+        } else if (OS.contains("mac")) {
+            return "mac";
+        } else {
+            return "other";
+        }
+    }
 
-	public static int MaxRam() {
-		return (int) (Runtime.getRuntime().maxMemory() / 1024 / 1024);
+    public static int MaxRam() {
+        return (int) (Runtime.getRuntime().maxMemory() / 1024 / 1024);
 
-	}
+    }
 
-	public static double FreeRam() {
-		return (double) Runtime.getRuntime().freeMemory() / 1024 / 1024;
-	}
+    public static double FreeRam() {
+        return (double) Runtime.getRuntime().freeMemory() / 1024 / 1024;
+    }
 
-	public static int threadCount() {
-		return osmx.getAvailableProcessors();
-	}
+    public static int threadCount() {
+        return osmx.getAvailableProcessors();
+    }
 
-	public static float getSystemLoad() {
-		return (float) osmx.getSystemLoadAverage();
-	}
+    public static float getSystemLoad() {
+        return (float) osmx.getSystemLoadAverage();
+    }
 
-	public static BenchResponse getBenchmark() {
-
-        String OS = getOS();
+    String OS = getOS();
 		String cpuname;
         if(OS.equals("windows")){
             cpuname = getCPU(OS);
@@ -222,11 +217,11 @@ public class SpecsGetter {
             cpuname = formatCPU(getCPU(OS));
         }
 
-		if (cpuname.equals("unknown")) {
-			return new BenchResponse(-1, -1, -1, -1, false);
-		}
+        if (cpuname.equals("unknown")) {
+            return new BenchResponse(-1, -1, -1, -1, false);
+        }
 
-		try {
+        try {
             URL url = new URL("https://github.com/alvindimas05/LagAssist/releases/latest/download/benchmark-data.json");
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("GET");
@@ -241,33 +236,41 @@ public class SpecsGetter {
 
             Gson gson = new Gson();
             BenchmarkData data = gson.fromJson(response.toString(), BenchmarkData.class);
-
+          
             String passMarkCpuName = normalizeCPUForPassMark(cpuname);
 
-            BenchmarkData.BenchmarkCPU benchmarkCPU = data.data.stream()
-                .filter(cpu -> cpu.name.contains(passMarkCpuName))
-                .collect(Collectors.toList()).get(0);
+            List<BenchmarkData.BenchmarkCPU> matches = data.data.stream()
+                    .filter(cpu -> cpu.name.contains(passMarkCpuName))
+                    .toList();
+
+            if (matches.isEmpty()) {
+                return new BenchResponse(-1, -1, -1, -1, false);
+            }
+
+            BenchmarkData.BenchmarkCPU benchmarkCPU = matches.getFirst();
 
             return new BenchResponse(
-                Integer.parseInt(benchmarkCPU.cpumark.replaceAll(",", "")),
-                0,
-                Integer.parseInt(benchmarkCPU.thread.replaceAll(",", "")),
-                Integer.parseInt(benchmarkCPU.cores),
-                true
+                    Integer.parseInt(benchmarkCPU.cpumark.replaceAll(",", "")),
+                    0,
+                    Integer.parseInt(benchmarkCPU.thread.replaceAll(",", "")),
+                    Integer.parseInt(benchmarkCPU.cores),
+                    true
             );
-		} catch (Exception e) {
+
+        } catch (Exception e) {
             e.printStackTrace();
         }
+
         return new BenchResponse(-1, -1, -1, -1, false);
+    }
 
-	}
 
-	public static int getSingleThreadScore() {
-		return getBenchmark().getSinglethread();
-	}
+    public static int getSingleThreadScore() {
+        return getBenchmark().getSinglethread();
+    }
 
-	public static int getMultiThreadScore() {
-		return getBenchmark().getMultithread();
-	}
+    public static int getMultiThreadScore() {
+        return getBenchmark().getMultithread();
+    }
 
 }
